Feat : move css to external file

--- a/index.html
+++ b/index.html
@@ -12,109 +12,7 @@
     </script>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swa">
-    <style>
-        body {
-            font-family: 'Poppins';
-            background-color: #f6f8fd;
-        }
-
-        #navbar .nav>.nav-item>a {
-            color: #15171a !important;
-            font-weight: 700;
-        }
-
-        #navbar .nav>.nav-item>a:hover {
-            font-weight: 800;
-            color: #0d6efd !important;
-        }
-
-        .project {
-            margin-bottom: 20px;
-            cursor: pointer;
-        }
-
-        .project .card {
-            border: none;
-        }
-
-        .project .card:hover {
-            border: 1px solid #0d6efd;
-            transition: 0.2s all ease-in-out;
-            transform: translateY(-8px);
-            
-        }
-
-        .project .card-body {
-            padding: 30px;
-        }
-
-        .div-spacer {
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
-        
-        .sticky {
-            position: -webkit-sticky;
-            position: sticky;
-            background-color: white;
-            top: 0;
-            transition: 300ms linear 0s;
-            padding: 10px;
-            z-index: 10000;
-        }
-
-        .sticky.sticky-hero {
-            background-color: transparent;
-            top: 128px;
-            z-index: 500;
-        }
-
-        .skills .content {
-            display: flex;
-            gap: 16px;
-            align-items: center;
-        }
-
-        .skills {
-            display: flex;
-            flex-direction: row;
-            gap: 10px !important;
-            width: 100%;
-            height: auto;
-            position: relative;
-            justify-content: center;
-        }
-
-        .skills .card {
-            border-radius: 16px !important;
-            border: 1px solid transparent;
-            cursor: default;
-        }
-
-        .skills .card:hover {
-            border: 1px solid #0d6efd;
-            transition: 0.5s all ease-in-out;
-            transform: translateY(-8px);
-        }
-
-        .skills .title {
-            font-weight: 700;
-            color: #2c2c2c;
-        }
-
-        .skills .description {
-            font-weight: 200;
-            color: #434343;
-        }
-
-        footer .nav {
-            gap: 20px;
-        }
-
-        footer .nav .nav-item:hover {
-            font-weight: 600;
-        }
-    </style>
+    <link rel="stylesheet" href="./assets/css/style.css" >
 </head>
 
 <body>
