Update list skills

--- a/index.html
+++ b/index.html
@@ -136,25 +136,36 @@
                     </div>
                 </div>
             </div>
-            <div class="skills">
+            <div class="skills mb-2">
                 <div class="card">
                     <div class="card-body">
                         <div class="content">
                             <img width="75" height="75" src="./assets/images/android.svg" alt="vue">
                             <div class="d-block">
                                 <h5 class="title">Android</h5>
-                                <div class="description">Mobile Development</div>
+                                <div class="description">Android Mobile Development</div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!-- <div class="card">
+                    <div class="card-body">
+                        <div class="content">
+                            <img width="75" height="75" src="./assets/images/swift.svg" alt="vue">
+                            <div class="d-block">
+                                <h5 class="title">Swift</h5>
+                                <div class="description">Ios Mobile Development</div>
+                            </div>
+                        </div>
+                    </div>
+                </div> -->
                 <div class="card">
                     <div class="card-body">
                         <div class="content">
                             <img width="75" height="75" src="./assets/images/flutter.svg" alt="vue">
                             <div class="d-block">
                                 <h5 class="title">Flutter</h5>
-                                <div class="description">Mobile Development</div>
+                                <div class="description">Cross Mobile Development</div>
                             </div>
                         </div>
                     </div>
@@ -165,7 +176,66 @@
                             <img width="75" height="75" src="./assets/images/react-native.svg" alt="vue">
                             <div class="d-block">
                                 <h5 class="title">React Native</h5>
-                                <div class="description">Front-End Development</div>
+                                <div class="description">Cross Mobile Development</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="skills mb-2">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="content">
+                            <img width="75" height="75" src="./assets/images/php.svg" alt="vue">
+                            <div class="d-block">
+                                <h5 class="title">PHP</h5>
+                                <div class="description">Back-End Development</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <div class="content">
+                            <img width="75" height="75" src="./assets/images/mysql.svg" alt="vue">
+                            <div class="d-block">
+                                <h5 class="title">MySQL</h5>
+                                <div class="description">Database Development</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <div class="content">
+                            <img width="75" height="75" src="./assets/images/sqlite.svg" alt="vue">
+                            <div class="d-block">
+                                <h5 class="title">SQLite</h5>
+                                <div class="description">Database Development</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <div class="content">
+                            <img width="75" height="75" src="./assets/images/firebase.svg" alt="vue">
+                            <div class="d-block">
+                                <h5 class="title">Firebase</h5>
+                                <div class="description">Realtime Database</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="skills">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="content">
+                            <img width="75" height="75" src="./assets/images/adobe-xd.svg" alt="vue">
+                            <div class="d-block">
+                                <h5 class="title">Adobe XD</h5>
+                                <div class="description">UI/UX Design</div>
                             </div>
                         </div>
                     </div>
